@@ -5423,7 +5423,9 @@ Generates a default path for the random seed file.
  my $file = Net::SSLeay::RAND_file_name($num);
  # $num - maximum size of returned file name
  #
- # returns: string with file name on success, '' (empty string) on failure
+ # returns: string with file name on success, '' (empty string) or undef on failure
+
+LibreSSL and OpenSSL 1.1.0a and later return undef when, for example, $num is not large enough to hold the filename.
 
 Check openssl doc L<http://www.openssl.org/docs/crypto/RAND_load_file.html|http://www.openssl.org/docs/crypto/RAND_load_file.html>
 
